--- a/public/index.html
+++ b/public/index.html
@@ -28,4 +28,5 @@
       To create a production bundle, use `npm run build`.
     -->
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 </html>
